# ROBOTICAN

./: .gitignore  GCS_ZENOH_CONFIG.json5  README.md  README_2.md  README_Agency.md  cyclonedds.xml  docker-compose.yml  drone_stream.xml  ros2_env.sh
examples/: CMakeLists.txt  package.xml
examples/src/: Drone_ROS2_VLM Pipeline_README.md  azimuth_capture_client.py  battery_monitor.py  demo_light_weather.py  draw_path.py  flight_mode_node.py  force_arm_and_fly_example.py  force_arm_and_roll_example.py  gui_manual_log.csv  image_state_subscriber_call_vlm.py  image_state_subscriber_call_vlm_2.py  multi_drone_patrol_example.py  multi_video_stream.py  rooster_yaw_controller.py  scratch.py  super_agent.py  tag_triangulation_node_new.py  test_rotation.py  turn_left_agent.py  turn_right_agent.py  video_example.py  video_stream.py  weather_demo.py
examples/src/add_objects/: spawn_static_mesh.py
examples/src/add_objects/tag15/: Tag15.mtl
examples/src/add_objects/tag15_fbx/: Tag15.fbx  tag15.fbx
examples/src/apriltag/: capture_snapshot_service.py  print_image_frame_id.py  print_tf_frames.py  tag_based_azimuth_and_image.py  tag_based_azimuth_and_image_2.py  tag_based_azimuth_continuous.py
examples/src/controller/: rooster_altitude_controller.py  rooster_time_controller.py  rooster_yaw_controller.py
examples/src/helpers/: ros2_domain_scanner.py  test_alive.py
examples/src/helpers/drawio/: Robotican_VILA_pipeline.drawio.xml  demo_with_main.drawio.xml
examples/src/keyboard_contorl/: axis_sweep_tester.py  control_record_keyboard.py  gui_manual_tester.py  keyboard_manual_control.py  main_run_path_and_capture.py  manual_core.py  manual_value_tester.py  multi_city_missions_gui.py  plot_track_from_csv.py
examples/src/keyboard_contorl/csv/: gui_manual_log_20251202_135644.csv  gui_manual_log_20251202_141137.csv  gui_manual_log_20251202_142914.csv  gui_manual_log_20251202_144534.csv  gui_manual_log_20251202_150434.csv  gui_manual_log_20251202_151141.csv  gui_manual_log_20251202_151729.csv  gui_manual_log_20251202_153215.csv  gui_manual_log_20251202_161020.csv  gui_manual_log_20251202_161404.csv  gui_manual_log_20251202_165749.csv  gui_manual_log_20251202_171117.csv  gui_manual_log_20251202_171807.csv  gui_manual_log_20251202_173636.csv  gui_manual_log_20251202_174608.csv  gui_manual_log_20251202_175642.csv  gui_manual_log_20251202_180257.csv  gui_manual_log_20251202_190200.csv  gui_manual_log_20251202_190854.csv
examples/src/keyboard_contorl/txt/: city_path_1.txt  city_path_2.txt  city_path_3.txt  flight_custom_path.txt  roll_custom_path.txt  roll_turn_path.txt
examples/src/movement/: ground_roll_turn_left_right.py  multi_drone_patrol_example.py  one_second_roll.py  roll_path_mamad.py
examples/src/paths/: R1_path.csv  R2_path.csv  R3_path.csv
examples/src/plan/: rooster_yaw_controller.py
examples/src/planner/: super_agent.py  turn_left_agent.py  turn_right_agent.py
examples/src/robotican_example/: lights_example.py
examples/src/video_and_capture/: image_azimuth_subscriber.py  image_state_subscriber_call_vlm.py  read_frames.py  video_stream.py  vlm_backfill_latest.py  vlm_backfill_latest_updated.py
rooster_interfaces/communication_handler_interfaces/communication_handler_interfaces/: CMakeLists.txt  package.xml
rooster_interfaces/communication_handler_interfaces/communication_handler_interfaces/msg/: GeneralCommunicationData.msg  Link.msg  Node.msg
rooster_interfaces/communication_handler_interfaces/communication_handler_interfaces/srv/: ChangeAllBandwidth.srv
rooster_interfaces/fcu_driver_interfaces/fcu_driver_interfaces/: CMakeLists.txt  package.xml
rooster_interfaces/fcu_driver_interfaces/fcu_driver_interfaces/action/: Calibration.action
rooster_interfaces/fcu_driver_interfaces/fcu_driver_interfaces/msg/: ActuatorControl.msg  AttitudeCommand.msg  Battery.msg  BodyVelocityCommand.msg  CommandLong.msg  DistanceSensor.msg  FencePolygon.msg  GPS.msg  GlobalWPCommand.msg  LocalPositionCommand.msg  LocalVelocityCommand.msg  ManualControl.msg  StatusText.msg  ThrusterCommand.msg  UAVState.msg  VisionPositionEstimate.msg
rooster_interfaces/fcu_driver_interfaces/fcu_driver_interfaces/srv/: DownloadLogFile.srv  GetFCUParamFloat.srv  GetFCUParamInt.srv  GetGeographicData.srv  GetLogFilesList.srv  SetFCUParamFloat.srv  SetFCUParamInt.srv  SetFCUParamsFloat.srv  SetFCUParamsInt.srv  SetFlightMode.srv  SetGeoFence.srv  SetRallyPoints.srv  Takeoff.srv
rooster_interfaces/io_driver_interfaces/io_driver_interfaces/: CMakeLists.txt  package.xml
rooster_interfaces/io_driver_interfaces/io_driver_interfaces/msg/: LedsData.msg
rooster_interfaces/io_driver_interfaces/io_driver_interfaces/srv/: ChangeLedState.srv
rooster_interfaces/microhard_handler_interfaces/microhard_handler_interfaces/: CMakeLists.txt  package.xml
rooster_interfaces/payload_driver_interfaces/payload_driver_interfaces/: CMakeLists.txt  package.xml
rooster_interfaces/rooster_handler_interfaces/rooster_handler_interfaces/: CMakeLists.txt  package.xml
rooster_interfaces/rooster_handler_interfaces/rooster_handler_interfaces/msg/: KeepAlive.msg  RoosterState.msg  RoostersState.msg  StatusText.msg
rooster_interfaces/rooster_handler_interfaces/rooster_handler_interfaces/srv/: RoosterAction.srv  SetRoosterFlightMode.srv
rooster_interfaces/rooster_manager_interfaces/rooster_manager_interfaces/: CMakeLists.txt  package.xml
rooster_interfaces/ros_common_interfaces/ros_common_interfaces/: CMakeLists.txt  package.xml
rooster_interfaces/ros_common_interfaces/ros_common_interfaces/action/: FileTransfer.action
rooster_interfaces/ros_common_interfaces/ros_common_interfaces/msg/: LLA.msg  LLAStamped.msg
rooster_interfaces/ros_common_interfaces/ros_common_interfaces/srv/: SaveParameters.srv
rooster_interfaces/rqs_vision_interfaces/rqs_vision_interfaces/: CMakeLists.txt  package.xml
rooster_interfaces/rqs_vision_interfaces/rqs_vision_interfaces/msg/: NetworkData.msg  (+3 more)
rooster_interfaces/video_handler_interfaces/video_handler_interfaces/: CMakeLists.txt  package.xml
(+22 files in other folders)
